cluster/deployments/cert-manager/ingresstraefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: traefik
 namespace: traefik
 annotations:
   cert-manager.io/issuer: "vault-issuer"
spec:
 tls:
   - hosts:
       - myk8s.net
     secretName: tls-myk8s-ingress-https
 rules:
   - host: myk8s.net
     http:
       paths:
         - path: /traefik
           pathType: Prefix
           backend:
             service:
               name: whoami
               port:
                 name: web
